@@ -1,3 +1,7 @@
+ 2003-07-30 Al Riddoch <alriddoch@zepler.org>
+    - skstream/skserver.cpp, skstream/skserver.h, skstream/skstream.cpp,
+      skstream/skstream.h, skstream/skstream_unix.h: Move virtual
+      function implementations into .cpp files.
  2003-07-25 Al Riddoch <alriddoch@zepler.org>
     - Don't build or run the unit tests if CppUnit is not found.
  2003-07-24 Al Riddoch <alriddoch@zepler.org>
